# video-anomaly-project

./: .dockerignore  .gcloudignore  .gitignore  Dockerfile  README.md  autoencoder_model.py  calibbrate_patches.py  calibrate_threshold.py  compare_models.py  conv_lstm.py  debug_features.py  detect_3d.py  detect_cae.py  detect_cae_motion.py  detect_lstm.py  detect_memae.py  detect_patches.py  detect_unet.py  download_data.py  evaluate.py  generate_reconstruction.py  generate_ucsd.py  inference_ucsd.py  main.py  memae_model.py  memory_module.py  model_3d.py  patch_model.py  prepare_ucsd.py  pyproject.toml  requirements.app.txt  requirements.txt  run_experiments.py  train.py  train_3d.py  train_cae.py  train_cae_motion.py  train_decoder.py  train_lstm.py  train_memae.py  (+6 more)
app/: main.py  streamlit_app.py
generated_results/: prediction_2107.avi
generated_results/experiments/: summary.csv
models/: c3d_ae.pth  cae_motion.pth  cae_ucsd.pth  patch_ae.pth
notebooks/: notebook.ipynb
scripts/: start.sh
scripts/generated_results/experiments/seq6_bs2_lr5e-04_hc128_l1_do0.00_wd0e+00/: metrics.json
scripts/generated_results/experiments/seq6_bs2_lr5e-04_hc128_l1_do0.00_wd1e-04/: metrics.json
src/: dataset.py  dataset_ucsd.py  generate.py  inference.py  lstm_detector.py  model.py  prepare_data.py
